Header with Buttons

--- a/headerWithButtons.html
+++ b/headerWithButtons.html
@@ -7,15 +7,14 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="container">
-    <h1>Bootstrap Practice</h1>
-    <ul>
-      <li><a href="collapse.html">Collpase</a></li>
-      <li><a href="accordion.html">Accordion</a></li>
-      <li><a href="navbar.html">Navbar</a></li>
-      <li><a href="navbar-my.html">My Navbar</a></li>
-      <li><a href="headerWithButtons.html">Header with Buttons</a></li>
-    </ul>
+<div class="container">
+  <div class="page-header">
+    <div class="btn-group pull-right">
+      <button type="button" class="btn btn-primary">Left</button>
+      <button type="button" class="btn btn-primary">Right</button>
+    </div>
+    <h1>Header with Buttons</h1>
   </div>
+</div>
 </body>
 </html>
